<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Bharat Army</string>
    <string name="next" translatable="false">NEXT</string>
    <string name="skip" translatable="false">SKIP</string>
    <string name="start" translatable="false">DONE</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="alert_msg" translatable="false">Alert Msg</string>
    <string name="internet_error" translatable="false">Internet Connection !</string>
    <string name="internet_connection_error" translatable="false">Oops, No internet connection Make sure wifi or cellular data is turned on then try again</string>
    <string name="blank" translatable="false">Blank Field Not Allowed</string>
    <string name="false_msg" translatable="false">Record not found</string>
    <string name="something_wrong" translatable="false">Aaah! Something went wrong Brace yourself till we get the error fixed from our end. Pull to refresh the page or try again later.</string>
    <string name="login_error_msg" translatable="false">Awww... Well, this is unexpected... An error has occurred and we\'re working to fix the problem! We\'ll be up and running shortly.</string>
    <string name="update_dialog_text" translatable="false">We\'re better than ever! We have added new features &amp; fixed some bugs to make your experience as smooth as possible.</string>
    <string name="username" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login_btn" translatable="false">SIGN IN</string>
    <string name="forgot" translatable="false">Forgot Password ?</string>
    <string name="sign_txt" translatable="false">Dont\'t have an account yet?</string>
    <string name="singup" translatable="false">Sign Up</string>
    <string name="fb_txt" translatable="false">Facebook</string>
    <string name="link_txt" translatable="false">LinkedIn</string>
    <string name="usererror" translatable="false">Blank field not allowed</string>
    <string name="verification" translatable="false">Verification</string>
    <string name="otp_str" translatable="false">We have sent you an access code via SMS for Mobile number verifications</string>
    <string name="code_str" translatable="false">Enter code here</string>
    <string name="verification_str" translatable="false">We will send a One Time Password (OTP) on this number for verification</string>
    <string name="mobile_veri" translatable="false">Phone Verification</string>
    <string name="verifycode" translatable="false">Verification</string>
    <string name="login_user_password_error" translatable="false">Please enter valid password</string>
    <string name="login_user_email_error" translatable="false">Please enter valid email address</string>
    <string name="login_user_password_helpertext1" translatable="false">Your password is week</string>
    <string name="login_user_password_helpertext2" translatable="false">Your password is strong</string>
    <string name="login_user_password_helpertext0" translatable="false">Password Required</string>
    <string name="login_user_email_helpertext" translatable="false">Email Required</string>
    <string name="weak" translatable="false">Weak</string>
    <string name="medium" translatable="false">Medium</string>
    <string name="strong" translatable="false">Strong</string>
    <string name="very_strong" translatable="false">Very Strong</string>
    <string name="password_strength" translatable="false">Password Strength</string>
    <string name="digit_password_strength" translatable="false">One Number</string>
    <string name="uppercase_password_strength" translatable="false">One uppercase character</string>
    <string name="minimum_password_strength" translatable="false">Minimum 5 character</string>
    <string name="specialchar_password_strength" translatable="false">One special character</string>
    <string name="signup_firstname_error" translatable="false">First Name is required</string>
    <string name="signup_secondname_error" translatable="false">Last Name is required</string>
    <string name="signup_blankemail_error" translatable="false">Email Address is required</string>
    <string name="signup_email_error" translatable="false">Invalid Email Address</string>
    <string name="signup_county_code_error" translatable="false">Country Code is required</string>
    <string name="signup_blankphone_number_error" translatable="false">Phone Number is required</string>
    <string name="signup_phone_number_error" translatable="false">Invalid Phone Number</string>
    <string name="signup_blankpassword_error" translatable="false">Password is required</string>
    <string name="singup_password_error" translatable="false">Password formate wrong</string>
    <string name="signup_privacy_error" translatable="false">Check the privacy policy</string>
    <string name="facebook_signup_error" translatable="false">Name is required</string>
    <string name="change_pass_confirm_error" translatable="false">Confim password required</string>
    <string name="change_pass_new_error" translatable="false">New password required</string>
    <string name="forgot_txt" translatable="false">To recover your password you need to enter your registered email address. We will sent the recovery code to your email</string>
    <string name="change_password_alert_txt" translatable="false">We have sent the recovery code via registered Email or Mobile Number</string>
    <string name="change_txt" translatable="false">Use at least 5 characters. Don\'t share the password. </string>
    <string name="new_pass" translatable="false">New Password</string>
    <string name="confirm_pass" translatable="false">Confirm Password</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="otppass_str" translatable="false"> We have sent you an access code via registered Email or Mobile Number</string>
    <string name="change_password_main" translatable="false">Change Password</string>
    <string name="all_notification" translatable="false">All Notification</string>
    <string name="notification_pagetitle" translatable="false">Notification Setting</string>
    <string name="mobile_notification" translatable="false">Mobile Notification</string>
    <string name="email_notification" translatable="false">Email Notification</string>
    <string name="sms_notification" translatable="false">SMS Notification</string>
    <string name="change_password_alert" translatable="false">Change Password Alert ?</string>
    <string name="remove_account" translatable="false">Remove Account Alert ?</string>
    <string name="remove_account_alert_txt" translatable="false">Remove this account you will lose all your message along with any media and files you shared.</string>
    <string name="forgot_password_email_error" translatable="false">Please enter register email address</string>
    <string name="change_newpassword_error" translatable="false">Please enter new password</string>
    <string name="change_confirmpassword_error" translatable="false">Please enter confirm password</string>
    <string name="change_pass_error" translatable="false">confirm password and new password must be same</string>
    <string name="mobile_verification_txt" translatable="false">Verify your mobile number</string>
    <string name="fullname" translatable="false">Name</string>
    <string name="emailid" translatable="false">Emailid</string>
    <string name="mobileno" translatable="false">Mobile Number</string>
    <string name="title_activity_dashboard" translatable="false">DashboardActivity</string>
    <string name="firstname" translatable="false">First Name</string>
    <string name="lastname" translatable="false">Last Name</string>
    <string name="otp_error" translatable="false">Please Enter OTP</string>
    <string name="otp_wrong_error" translatable="false">Please enter valid otp</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="terms_txt" translatable="false">Agreed to</string>
    <string name="terms_condition_txt" translatable="false"><u>Privacy Policy</u></string>
    <string name="close" translatable="false">Back to login</string>
    <string name="termStr" translatable="false"></string>
    <string name="close_str" translatable="false"><u>close</u></string>
    <string name="know_more" translatable="false">Know More</string>
    <string name="upcoming" translatable="false">UPCOMING TOURNAMENTS &amp; SERIES</string>
    <string name="exploring_category" translatable="false">Explore Categories</string>
    <string name="exploring_show" translatable="false">Show all</string>
    <string name="sposer_ads" translatable="false">Sposer ads</string>
    <string name="fixture" translatable="false">ICC CRICKET WORLD CUP 2019 FIXTURES</string>
    <string name="all_fixture" translatable="false">ALL FIXTURES</string>
    <string name="bharat_army_story" translatable="false">BHARAT ARMY NEWS</string>
    <string name="about_us" translatable="false">About Us</string>
    <string name="sponser" translatable="false">Sponsor ads</string>
    <string name="quiz_header" translatable="false">Bharat Army Quiz</string>
    <string name="quiz_answer_explanation" translatable="false">Explanation</string>
    <string name="quiz_answer_correct" translatable="false">This Answer is Correct</string>
    <string name="quiz_answer_incorrect" translatable="false">This Answer is Incorrect</string>
    <string name="email" translatable="false">Email</string>
    <string name="phoneno" translatable="false">Phone Number</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="hello_txt" translatable="false">Hello</string>
    <string name="upload" translatable="false">Upload Photo</string>
    <string name="personal_info" translatable="false">Personal Infomation</string>
    <string name="save" translatable="false">Save</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="myprofile" translatable="false">My Profile</string>
    <string name="history" translatable="false">History</string>
    <string name="fan" translatable="false">Fan</string>
    <string name="cd_rewind_media_button" translatable="false">Rewind media button</string>
    <string name="cd_pause_media_button" translatable="false">Pause media button</string>
    <string name="cd_forward_media_button" translatable="false">Forward media button</string>
    <string name="cd_fullscreen_media_button" translatable="false">Fullscreen media button</string>
    <string name="cancellation_detail" translatable="false">In the event of cancellation of tour  travel services due to any avoidable  unavoidable reasons we must be notified of the same in writing. Cancellation charges will be effective from the date we receive advice in writing, and cancellation charges would be as follows:

45 days prior to arrival: 10% of the Tour / service cost
15 days prior to arrival: 25% of the Tour / service cost
07 days prior to arrival: 50% of the Tour / service cost
48 hours prior to arrival OR No Show: No Refund</string>
    <string name="error_unregister_carrier_number" translatable="false">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
</resources>