<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/navigation_myprofile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/myprofile"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/navigation_fan"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/fan"
        app:showAsAction="ifRoom|withText"/>
</menu>