<?xml version="1.0" encoding="utf-8"?>
<layout>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.EditProfileActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar_item"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">
    <LinearLayout
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="left"
        android:background="@drawable/profile"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/proflie" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp">
        <TextView
            android:id="@+id/hello_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_font"
            android:textColor="@color/normal_font_color"
            android:textSize="@dimen/_11sdp"
            android:text="@string/hello_txt"
            android:gravity="center_vertical" />
        <TextView
            android:id="@+id/username_title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title_text_font"
            android:textColor="@color/heading_bg"
            android:textSize="@dimen/_13sdp"
            android:text="Rakesh Patel"
            android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/upload_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/title_text_font"
                android:textColor="@color/skip_color"
                android:textSize="@dimen/_13sdp"
                android:text="@string/upload"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/_5sdp"/>
        </LinearLayout>
    </LinearLayout>


        <TextView
            android:id="@+id/personal_info_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title_text_font"
            android:textColor="@color/heading_bg"
            android:textSize="@dimen/_13sdp"
            android:text="@string/personal_info"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:paddingBottom="@dimen/_5sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_line"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <EditText
            android:id="@+id/user_name_edt"
            style="@style/text_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@android:color/transparent"
            android:hint="@string/full_name"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingLeft="@dimen/_5sdp"
            android:textColor="@color/heading_bg"
            android:textColorHint="@color/hint_txt_color"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/_12sdp"
            android:imeOptions="actionNext"/>
    </LinearLayout>
    <TextView
        android:id="@+id/gender_info_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/title_text_font"
        android:textColor="@color/heading_bg"
        android:textSize="@dimen/_13sdp"
        android:text="@string/gender"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp" />


        <RadioGroup
            android:id="@+id/gender_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp">


            <RadioButton
                android:id="@+id/male_rb"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/male"
                style="@style/text_font"
                android:textColor="@color/heading_bg"
                android:buttonTint="@color/skip_color"/>

            <RadioButton
                android:id="@+id/female_rb"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/female"
                style="@style/text_font"
                android:textColor="@color/heading_bg"
                android:layout_marginLeft="@dimen/_10sdp"
                android:buttonTint="@color/skip_color"/>
        </RadioGroup>

    <TextView
        android:id="@+id/email_info_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/title_text_font"
        android:textColor="@color/heading_bg"
        android:textSize="@dimen/_13sdp"
        android:text="@string/email"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_line"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <EditText
            android:id="@+id/email_edt"
            style="@style/text_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:maxLength="150"
            android:paddingLeft="@dimen/_5sdp"
            android:textColor="@color/heading_bg"
            android:textColorHint="@color/hint_txt_color"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/_12sdp"
            android:clickable="false"
            android:focusable="false"
            android:imeOptions="actionNext"/>
    </LinearLayout>

    <TextView
        android:id="@+id/phone_number_info_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/title_text_font"
        android:textColor="@color/heading_bg"
        android:textSize="@dimen/_13sdp"
        android:text="@string/phoneno"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_line"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp">
        <com.bharatarmy.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_5sdp"
            style="@style/text_font"
            app:ccp_countryPreference="IN,GB,AU,CA,US,SG"
            app:ccp_textColor="@color/normal_font_color"
            app:ccp_textFont="thesansplain.ttf"/>
        <EditText
            android:id="@+id/phone_no_edt"
            style="@style/text_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@android:color/transparent"
            android:hint="@string/phoneno"
            android:maxLines="1"
            android:inputType="phone"
            android:maxLength="12"
            android:paddingLeft="@dimen/_5sdp"
            android:textColor="@color/heading_bg"
            android:textColorHint="@color/hint_txt_color"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/_12sdp"
            android:imeOptions="actionNext"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_15sdp">
        
        <Button
            android:id="@+id/save_btn"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/skip_color"
            android:text="@string/save"
            android:textColor="@color/splash_bg_color"
            android:textSize="@dimen/_15sdp"
            style="@style/text_font"/>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/cancel_btn"
            android:text="@string/cancel"
            android:textColor="@color/skip_color"
            android:textSize="@dimen/_15sdp"
            style="@style/text_font"
            android:layout_marginLeft="@dimen/_15sdp"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>
</layout>