<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_3sdp">

        <ImageButton
            android:id="@+id/start_pause_media_button"
            style="@android:style/MediaButton.Play"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/cd_pause_media_button" />

        <ImageButton
            android:id="@+id/rewind_media_button"
            style="@android:style/MediaButton.Rew"
            android:layout_toStartOf="@id/start_pause_media_button"
            android:contentDescription="@string/cd_rewind_media_button" />

        <ImageButton
            android:id="@+id/forward_media_button"
            style="@android:style/MediaButton.Ffwd"
            android:layout_toEndOf="@id/start_pause_media_button"
            android:contentDescription="@string/cd_forward_media_button" />

        <TextView
            android:id="@+id/playback_speed_button"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="1.00x"
            android:textColor="#CC000000"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/progress_seek_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp"
            android:paddingTop="4dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/fullscreen_media_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_fullscreen_media_button"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="1dp"
            android:paddingTop="4dp" />
    </LinearLayout>
</LinearLayout>