<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TimerActivity">

    <HorizontalScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/background"
                android:layout_width="1000dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </FrameLayout>

    </HorizontalScrollView>
    <!--<LinearLayout-->
        <!--android:id="@+id/bg_linear"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:background="@drawable/dropshadow"-->
        <!--android:orientation="vertical"-->
        <!--android:visibility="gone">-->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <!--</LinearLayout>-->
    <LinearLayout
        android:id="@+id/circles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_65sdp"
        android:orientation="horizontal">

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_next"
            style="@style/title_text_font"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/heading_bg"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_skip"
            style="@style/title_text_font"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/heading_bg"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_done"
            style="@style/title_text_font"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/heading_bg"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>
